code/Parser/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser/ParGrammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	String -> L_quoted                                 (2)
	VariableSymbol -> L_VariableSymbol                 (3)
	BasicSymbol -> L_BasicSymbol                       (4)
	Program -> ListDeclaration                         (5)
	Declaration -> AspDeclaration                      (6)
	Declaration -> '#pos' Example                      (7)
	Declaration -> '#neg' Example                      (8)
	Declaration -> Integer '~' AspDeclaration          (9)
	AspDeclaration -> Head ':-' ListLiteral            (10)
	AspDeclaration -> Atom                             (11)
	AspDeclaration -> ':-' ListLiteral                 (12)
	AspDeclaration -> BasicSymbol '(' Integer '..' Integer ')'   (13)
	AspDeclaration -> Bound '{' ListChoiceElem '}' Bound   (14)
	Head -> Atom                                       (15)
	Head -> Bound '{' ListChoiceElem '}' Bound         (16)
	Bound -> Integer                                   (17)
	Bound ->                                           (18)
	ChoiceElem -> Atom ':' ListLiteral                 (19)
	ChoiceElem -> Atom                                 (20)
	Atom -> BasicSymbol                                (21)
	Atom -> BasicSymbol '(' ListTerm ')'               (22)
	Term -> BasicSymbol                                (23)
	Term -> ArithmeticExpr                             (24)
	Term -> String                                     (25)
	Term -> '(' Term ',' ListTerm ')'                  (26)
	Literal -> Atom                                    (27)
	Literal -> 'not' Atom                              (28)
	Literal -> Term CompOp Term                        (29)
	CompOp -> '<'                                      (30)
	CompOp -> '<='                                     (31)
	CompOp -> '>'                                      (32)
	CompOp -> '>='                                     (33)
	CompOp -> '='                                      (34)
	CompOp -> '=='                                     (35)
	CompOp -> '!='                                     (36)
	ArithmeticExpr -> ArithmeticExpr '+' ArithmeticExpr1   (37)
	ArithmeticExpr -> ArithmeticExpr '-' ArithmeticExpr1   (38)
	ArithmeticExpr -> ArithmeticExpr1                  (39)
	ArithmeticExpr1 -> ArithmeticExpr1 '*' ArithmeticExpr2   (40)
	ArithmeticExpr1 -> ArithmeticExpr1 '/' ArithmeticExpr2   (41)
	ArithmeticExpr1 -> ArithmeticExpr2                 (42)
	ArithmeticExpr2 -> '-' ArithmeticExpr3             (43)
	ArithmeticExpr2 -> ArithmeticExpr3                 (44)
	ArithmeticExpr3 -> '|' ArithmeticExpr4 '|'         (45)
	ArithmeticExpr3 -> ArithmeticExpr4                 (46)
	ArithmeticExpr4 -> VariableSymbol                  (47)
	ArithmeticExpr4 -> Integer                         (48)
	ArithmeticExpr4 -> '(' ArithmeticExpr ')'          (49)
	Example -> '(' '{' ListAtom '}' ',' '{' ListAtom '}' ')'   (50)
	Example -> '(' '{' ListAtom '}' ',' '{' ListAtom '}' ',' '{' ListAspDeclaration '}' ')'   (51)
	ListLiteral -> Literal                             (52)
	ListLiteral -> Literal ',' ListLiteral             (53)
	ListAtom ->                                        (54)
	ListAtom -> Atom                                   (55)
	ListAtom -> Atom ',' ListAtom                      (56)
	ListChoiceElem -> ChoiceElem                       (57)
	ListChoiceElem -> ChoiceElem ';' ListChoiceElem    (58)
	ListAspDeclaration ->                              (59)
	ListAspDeclaration -> AspDeclaration '.' ListAspDeclaration   (60)
	ListTerm -> Term                                   (61)
	ListTerm -> Term ',' ListTerm                      (62)
	ListDeclaration -> Declaration '.'                 (63)
	ListDeclaration -> Declaration '.' ListDeclaration   (64)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'#neg'         { PT _ (TS _ 2) }
	'#pos'         { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'.'            { PT _ (TS _ 10) }
	'..'           { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	':'            { PT _ (TS _ 13) }
	':-'           { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'not'          { PT _ (TS _ 22) }
	'{'            { PT _ (TS _ 23) }
	'|'            { PT _ (TS _ 24) }
	'}'            { PT _ (TS _ 25) }
	'~'            { PT _ (TS _ 26) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_VariableSymbol{ PT _ (T_VariableSymbol $$) }
	L_BasicSymbol  { PT _ (T_BasicSymbol $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	String          rule  2
	VariableSymbol  rule  3
	BasicSymbol     rule  4
	Program         rule  5
	Declaration     rules 6, 7, 8, 9
	AspDeclaration  rules 10, 11, 12, 13, 14
	Head            rules 15, 16
	Bound           rules 17, 18
	ChoiceElem      rules 19, 20
	Atom            rules 21, 22
	Term            rules 23, 24, 25, 26
	Literal         rules 27, 28, 29
	CompOp          rules 30, 31, 32, 33, 34, 35, 36
	ArithmeticExpr  rules 37, 38, 39
	ArithmeticExpr1 rules 40, 41, 42
	ArithmeticExpr2 rules 43, 44
	ArithmeticExpr3 rules 45, 46
	ArithmeticExpr4 rules 47, 48, 49
	Example         rules 50, 51
	ListLiteral     rules 52, 53
	ListAtom        rules 54, 55, 56
	ListChoiceElem  rules 57, 58
	ListAspDeclaration rules 59, 60
	ListTerm        rules 61, 62
	ListDeclaration rules 63, 64

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'#neg'         shift, and enter state 12
	'#pos'         shift, and enter state 13
	':-'           shift, and enter state 14
	'{'            reduce using rule 18
	L_integ        shift, and enter state 2
	L_BasicSymbol  shift, and enter state 15

	Integer        goto state 3
	BasicSymbol    goto state 4
	Program        goto state 5
	Declaration    goto state 6
	AspDeclaration goto state 7
	Head           goto state 8
	Bound          goto state 9
	Atom           goto state 10
	ListDeclarationgoto state 11

State 1

	Integer -> . L_integ                                (rule 1)

	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'.'            reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	':-'           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'{'            reduce using rule 1
	'|'            reduce using rule 1
	'}'            reduce using rule 1
	'~'            reduce using rule 1


State 3

	Declaration -> Integer . '~' AspDeclaration         (rule 9)
	Bound -> Integer .                                  (rule 17)

	'{'            reduce using rule 17
	'~'            shift, and enter state 42


State 4

	AspDeclaration -> BasicSymbol . '(' Integer '..' Integer ')'    (rule 13)
	Atom -> BasicSymbol .                               (rule 21)
	Atom -> BasicSymbol . '(' ListTerm ')'              (rule 22)

	'('            shift, and enter state 41
	'.'            reduce using rule 21
	':-'           reduce using rule 21


State 5

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 6

	ListDeclaration -> Declaration . '.'                (rule 63)
	ListDeclaration -> Declaration . '.' ListDeclaration    (rule 64)

	'.'            shift, and enter state 40


State 7

	Declaration -> AspDeclaration .                     (rule 6)

	'.'            reduce using rule 6


State 8

	AspDeclaration -> Head . ':-' ListLiteral           (rule 10)

	':-'           shift, and enter state 39


State 9

	AspDeclaration -> Bound . '{' ListChoiceElem '}' Bound    (rule 14)
	Head -> Bound . '{' ListChoiceElem '}' Bound        (rule 16)

	'{'            shift, and enter state 38


State 10

	AspDeclaration -> Atom .                            (rule 11)
	Head -> Atom .                                      (rule 15)

	'.'            reduce using rule 11
	':-'           reduce using rule 15


State 11

	Program -> ListDeclaration .                        (rule 5)

	%eof           reduce using rule 5


State 12

	Declaration -> '#neg' . Example                     (rule 8)

	'('            shift, and enter state 36

	Example        goto state 37

State 13

	Declaration -> '#pos' . Example                     (rule 7)

	'('            shift, and enter state 36

	Example        goto state 35

State 14

	AspDeclaration -> ':-' . ListLiteral                (rule 12)

	'('            shift, and enter state 29
	'-'            shift, and enter state 30
	'not'          shift, and enter state 31
	'|'            shift, and enter state 32
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 33
	L_VariableSymbolshift, and enter state 34
	L_BasicSymbol  shift, and enter state 15

	Integer        goto state 16
	String         goto state 17
	VariableSymbol goto state 18
	BasicSymbol    goto state 19
	Atom           goto state 20
	Term           goto state 21
	Literal        goto state 22
	ArithmeticExpr goto state 23
	ArithmeticExpr1goto state 24
	ArithmeticExpr2goto state 25
	ArithmeticExpr3goto state 26
	ArithmeticExpr4goto state 27
	ListLiteral    goto state 28

State 15

	BasicSymbol -> L_BasicSymbol .                      (rule 4)

	'!='           reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	','            reduce using rule 4
	'.'            reduce using rule 4
	':'            reduce using rule 4
	':-'           reduce using rule 4
	';'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'='            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'}'            reduce using rule 4


State 16

	ArithmeticExpr4 -> Integer .                        (rule 48)

	'!='           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'.'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'='            reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'|'            reduce using rule 48
	'}'            reduce using rule 48


State 17

	Term -> String .                                    (rule 25)

	'!='           reduce using rule 25
	')'            reduce using rule 25
	','            reduce using rule 25
	'.'            reduce using rule 25
	';'            reduce using rule 25
	'<'            reduce using rule 25
	'<='           reduce using rule 25
	'='            reduce using rule 25
	'=='           reduce using rule 25
	'>'            reduce using rule 25
	'>='           reduce using rule 25
	'}'            reduce using rule 25


State 18

	ArithmeticExpr4 -> VariableSymbol .                 (rule 47)

	'!='           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'.'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'|'            reduce using rule 47
	'}'            reduce using rule 47


State 19

	Atom -> BasicSymbol .                               (rule 21)
	Atom -> BasicSymbol . '(' ListTerm ')'              (rule 22)
	Term -> BasicSymbol .                               (rule 23)

	'!='           reduce using rule 23
	'('            shift, and enter state 75
	','            reduce using rule 21
	'.'            reduce using rule 21
	';'            reduce using rule 21
	'<'            reduce using rule 23
	'<='           reduce using rule 23
	'='            reduce using rule 23
	'=='           reduce using rule 23
	'>'            reduce using rule 23
	'>='           reduce using rule 23
	'}'            reduce using rule 21


State 20

	Literal -> Atom .                                   (rule 27)

	','            reduce using rule 27
	'.'            reduce using rule 27
	';'            reduce using rule 27
	'}'            reduce using rule 27


State 21

	Literal -> Term . CompOp Term                       (rule 29)

	'!='           shift, and enter state 68
	'<'            shift, and enter state 69
	'<='           shift, and enter state 70
	'='            shift, and enter state 71
	'=='           shift, and enter state 72
	'>'            shift, and enter state 73
	'>='           shift, and enter state 74

	CompOp         goto state 67

State 22

	ListLiteral -> Literal .                            (rule 52)
	ListLiteral -> Literal . ',' ListLiteral            (rule 53)

	','            shift, and enter state 66
	'.'            reduce using rule 52
	';'            reduce using rule 52
	'}'            reduce using rule 52


State 23

	Term -> ArithmeticExpr .                            (rule 24)
	ArithmeticExpr -> ArithmeticExpr . '+' ArithmeticExpr1    (rule 37)
	ArithmeticExpr -> ArithmeticExpr . '-' ArithmeticExpr1    (rule 38)

	'!='           reduce using rule 24
	')'            reduce using rule 24
	'+'            shift, and enter state 64
	','            reduce using rule 24
	'-'            shift, and enter state 65
	'.'            reduce using rule 24
	';'            reduce using rule 24
	'<'            reduce using rule 24
	'<='           reduce using rule 24
	'='            reduce using rule 24
	'=='           reduce using rule 24
	'>'            reduce using rule 24
	'>='           reduce using rule 24
	'}'            reduce using rule 24


State 24

	ArithmeticExpr -> ArithmeticExpr1 .                 (rule 39)
	ArithmeticExpr1 -> ArithmeticExpr1 . '*' ArithmeticExpr2    (rule 40)
	ArithmeticExpr1 -> ArithmeticExpr1 . '/' ArithmeticExpr2    (rule 41)

	'!='           reduce using rule 39
	')'            reduce using rule 39
	'*'            shift, and enter state 62
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'.'            reduce using rule 39
	'/'            shift, and enter state 63
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'='            reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'}'            reduce using rule 39


State 25

	ArithmeticExpr1 -> ArithmeticExpr2 .                (rule 42)

	'!='           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'.'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'='            reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'}'            reduce using rule 42


State 26

	ArithmeticExpr2 -> ArithmeticExpr3 .                (rule 44)

	'!='           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'.'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'}'            reduce using rule 44


State 27

	ArithmeticExpr3 -> ArithmeticExpr4 .                (rule 46)

	'!='           reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'.'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'='            reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'}'            reduce using rule 46


State 28

	AspDeclaration -> ':-' ListLiteral .                (rule 12)

	'.'            reduce using rule 12


State 29

	Term -> '(' . Term ',' ListTerm ')'                 (rule 26)
	ArithmeticExpr4 -> '(' . ArithmeticExpr ')'         (rule 49)

	'('            shift, and enter state 29
	'-'            shift, and enter state 30
	'|'            shift, and enter state 32
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 33
	L_VariableSymbolshift, and enter state 34
	L_BasicSymbol  shift, and enter state 15

	Integer        goto state 16
	String         goto state 17
	VariableSymbol goto state 18
	BasicSymbol    goto state 46
	Term           goto state 60
	ArithmeticExpr goto state 61
	ArithmeticExpr1goto state 24
	ArithmeticExpr2goto state 25
	ArithmeticExpr3goto state 26
	ArithmeticExpr4goto state 27

State 30

	ArithmeticExpr2 -> '-' . ArithmeticExpr3            (rule 43)

	'('            shift, and enter state 57
	'|'            shift, and enter state 32
	L_integ        shift, and enter state 2
	L_VariableSymbolshift, and enter state 34

	Integer        goto state 16
	VariableSymbol goto state 18
	ArithmeticExpr3goto state 59
	ArithmeticExpr4goto state 27

State 31

	Literal -> 'not' . Atom                             (rule 28)

	L_BasicSymbol  shift, and enter state 15

	BasicSymbol    goto state 51
	Atom           goto state 58

State 32

	ArithmeticExpr3 -> '|' . ArithmeticExpr4 '|'        (rule 45)

	'('            shift, and enter state 57
	L_integ        shift, and enter state 2
	L_VariableSymbolshift, and enter state 34

	Integer        goto state 16
	VariableSymbol goto state 18
	ArithmeticExpr4goto state 56

State 33

	String -> L_quoted .                                (rule 2)

	'!='           reduce using rule 2
	')'            reduce using rule 2
	','            reduce using rule 2
	'.'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'='            reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'}'            reduce using rule 2


State 34

	VariableSymbol -> L_VariableSymbol .                (rule 3)

	'!='           reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'.'            reduce using rule 3
	'/'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'='            reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'|'            reduce using rule 3
	'}'            reduce using rule 3


State 35

	Declaration -> '#pos' Example .                     (rule 7)

	'.'            reduce using rule 7


State 36

	Example -> '(' . '{' ListAtom '}' ',' '{' ListAtom '}' ')'    (rule 50)
	Example -> '(' . '{' ListAtom '}' ',' '{' ListAtom '}' ',' '{' ListAspDeclaration '}' ')'    (rule 51)

	'{'            shift, and enter state 55


State 37

	Declaration -> '#neg' Example .                     (rule 8)

	'.'            reduce using rule 8


State 38

	AspDeclaration -> Bound '{' . ListChoiceElem '}' Bound    (rule 14)
	Head -> Bound '{' . ListChoiceElem '}' Bound        (rule 16)

	L_BasicSymbol  shift, and enter state 15

	BasicSymbol    goto state 51
	ChoiceElem     goto state 52
	Atom           goto state 53
	ListChoiceElem goto state 54

State 39

	AspDeclaration -> Head ':-' . ListLiteral           (rule 10)

	'('            shift, and enter state 29
	'-'            shift, and enter state 30
	'not'          shift, and enter state 31
	'|'            shift, and enter state 32
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 33
	L_VariableSymbolshift, and enter state 34
	L_BasicSymbol  shift, and enter state 15

	Integer        goto state 16
	String         goto state 17
	VariableSymbol goto state 18
	BasicSymbol    goto state 19
	Atom           goto state 20
	Term           goto state 21
	Literal        goto state 22
	ArithmeticExpr goto state 23
	ArithmeticExpr1goto state 24
	ArithmeticExpr2goto state 25
	ArithmeticExpr3goto state 26
	ArithmeticExpr4goto state 27
	ListLiteral    goto state 50

State 40

	ListDeclaration -> Declaration '.' .                (rule 63)
	ListDeclaration -> Declaration '.' . ListDeclaration    (rule 64)

	'#neg'         shift, and enter state 12
	'#pos'         shift, and enter state 13
	':-'           shift, and enter state 14
	'{'            reduce using rule 18
	L_integ        shift, and enter state 2
	L_BasicSymbol  shift, and enter state 15
	%eof           reduce using rule 63

	Integer        goto state 3
	BasicSymbol    goto state 4
	Declaration    goto state 6
	AspDeclaration goto state 7
	Head           goto state 8
	Bound          goto state 9
	Atom           goto state 10
	ListDeclarationgoto state 49

State 41

	AspDeclaration -> BasicSymbol '(' . Integer '..' Integer ')'    (rule 13)
	Atom -> BasicSymbol '(' . ListTerm ')'              (rule 22)

	'('            shift, and enter state 29
	'-'            shift, and enter state 30
	'|'            shift, and enter state 32
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 33
	L_VariableSymbolshift, and enter state 34
	L_BasicSymbol  shift, and enter state 15

	Integer        goto state 45
	String         goto state 17
	VariableSymbol goto state 18
	BasicSymbol    goto state 46
	Term           goto state 47
	ArithmeticExpr goto state 23
	ArithmeticExpr1goto state 24
	ArithmeticExpr2goto state 25
	ArithmeticExpr3goto state 26
	ArithmeticExpr4goto state 27
	ListTerm       goto state 48

State 42

	Declaration -> Integer '~' . AspDeclaration         (rule 9)

	':-'           shift, and enter state 14
	'{'            reduce using rule 18
	L_integ        shift, and enter state 2
	L_BasicSymbol  shift, and enter state 15

	Integer        goto state 43
	BasicSymbol    goto state 4
	AspDeclaration goto state 44
	Head           goto state 8
	Bound          goto state 9
	Atom           goto state 10

State 43

	Bound -> Integer .                                  (rule 17)

	'.'            reduce using rule 17
	':-'           reduce using rule 17
	'{'            reduce using rule 17


State 44

	Declaration -> Integer '~' AspDeclaration .         (rule 9)

	'.'            reduce using rule 9


State 45

	AspDeclaration -> BasicSymbol '(' Integer . '..' Integer ')'    (rule 13)
	ArithmeticExpr4 -> Integer .                        (rule 48)

	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'..'           shift, and enter state 93
	'/'            reduce using rule 48


State 46

	Term -> BasicSymbol .                               (rule 23)
